--- a/app/views/game_boards/show.html.haml
+++ b/app/views/game_boards/show.html.haml
@@ -19,6 +19,6 @@
   %b Board:
   = @game_board.board
 
-= link_to 'Edit', edit_game_board_path(@game_board)
-\|
-= link_to 'Back', game_boards_path
+-# = link_to 'Edit', edit_game_board_path(@game_board)
+
+= link_to 'Back to Home page', root_path
