--- a/app/views/game_boards/new.html.haml
+++ b/app/views/game_boards/new.html.haml
@@ -2,6 +2,5 @@
 
 = render 'form'
 
-= link_to 'Back', game_boards_path
+= link_to 'Back to Home page', root_path
 
-= render 'game_boards/last_10_board'
