--- a/app/views/game_boards/_form.html.haml
+++ b/app/views/game_boards/_form.html.haml
@@ -8,23 +8,23 @@
 
   .form-group
     = f.label :name, class: "form-label"
-    = f.text_field :name, class: "form-control"
+    = f.text_field :name, class: "form-control", required: true
 
   .form-group
     = f.label :width, class: "form-label"
-    = f.number_field :width, class: "form-control"
+    = f.number_field :width, class: "form-control", required: true
 
   .form-group
     = f.label :height, class: "form-label"
-    = f.number_field :height, class: "form-control"
+    = f.number_field :height, class: "form-control", required: true
 
   .form-group
     = f.label :bomb_amount, class: "form-label"
-    = f.number_field :bomb_amount, class: "form-control"
+    = f.number_field :bomb_amount, class: "form-control", required: true
 
   .form-group
     = f.label :email, class: "form-label"
-    = f.text_field :email, class: "form-control"
+    = f.text_field :email, class: "form-control", required: true
 
   .form-group.py-3
     = f.submit 'Save', class: "btn btn-primary"
