--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,8 @@
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   %body
+    - if flash[:alert]
+      .alert.alert-danger= flash[:alert]
     = yield
 
     %script{ type: "module" }
