--- a/app/views/game_boards/_form.html.haml
+++ b/app/views/game_boards/_form.html.haml
@@ -27,5 +27,5 @@
     = f.text_field :email, class: "form-control", required: true
 
   .form-group.py-3
-    = f.submit 'Save', class: "btn btn-primary"
+    = f.submit 'Generate Board', class: "btn btn-primary"
 
