--- a/app/views/game_boards/_game_boards.html.haml
+++ b/app/views/game_boards/_game_boards.html.haml
@@ -18,3 +18,5 @@
           %td= game_board.bomb_amount
           %td= game_board.email
           %td= game_board.created_at.strftime("%Y-%m-%d")
+%div.container.text-center
+  = will_paginate @game_boards, class: 'text-center navigation'
