--- a/app/views/game_boards/show.html.haml
+++ b/app/views/game_boards/show.html.haml
@@ -31,6 +31,9 @@
           }
               %span ⬜
 
-  %button#reset_btn.btn.btn-warning Reset
+  %div.button_holder
+    %button#reset_btn.btn.btn-warning Reset
+    %button#show_btn.btn.btn-success Show All
+
 
   = link_to 'Back to Home page', root_path, class: 'btn btn-primary mt-3'
