--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,7 +83,7 @@ em {
 
 .button_holder {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 2rem;
   padding: 1rem 0;
 }
